@@ -5,3 +5,4 @@
 - Amos Latteier, Contributor
 - Jacob Radford, Contributor
 - Jonathan Ballet, Contributor
+- Domen Kozar, Contributor
