@@ -1,6 +1,8 @@
 0.10 (unreleased)
 =================
 
+ - Added support for disabling supervisor sections (such as http, rpc and ctl) [Domen Kozar]
+
 
 0.9 (2009-11-04)
 ================
